--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "launch": "node index.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
